# BuildByConvention

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workspaces/: docker-image.yml
auto_build/: Cargo.toml  watch.sh
auto_build/src/: builddir.rs  generators.rs  lib.rs  main.rs
auto_build/templates/: app.CMakeLists  app.CMakeLists.txt  lib.CMakeFiles  lib.CMakeLists  test.CMakeLists  top.CMakeFiles  top.CMakeLists
sample_project/: CMakeLists.txt
sample_project/app_Demo/: .autobuild.yml  CMakeLists.txt  main.cpp
sample_project/lib_Helper/: CMakeLists.txt  Helper.cpp  Helper.h
sample_project/test_Helper/: CMakeLists.txt  Helper_tests.cpp
